Implement new shop registration and update user controller logic
